--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
         "react-spinners": "^0.11.0",
         "typescript": "^4.1.2",
         "web-vitals": "^1.0.1",
-        "zetrix-encryption-nodejs": "file:./secret/zetrix-encryption-nodejs",
-        "zetrix-sdk-nodejs": "file:./secret/zetrix-sdk-nodejs"
+        "zetrix-encryption-nodejs": "file:secret/zetrix-encryption-nodejs",
+        "zetrix-sdk-nodejs": "file:secret/zetrix-sdk-nodejs"
     },
     "scripts": {
         "start": "react-scripts start",
